# Backgammon-simulator

./: CMakeLists.txt  main.cpp
include/: board.h  constants.h  dice.h  menu.h  player.h  token.h
src/: board.cpp  constants.cpp  dice.cpp  menu.cpp  player.cpp
